--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,5 +1,5 @@
 Package: gRapHD
-Version: 0.1.8
+Version: 0.1.9
 Date: 2009-09-15
 Title: Efficient selection of undirected graphical models for
         high-dimensional datasets
@@ -19,6 +19,6 @@ Description: gRapHD is designed for efficient selection of
         supports the use of discrete, continuous, or both types of
         variables.
 License: GPL (>= 3)
-Packaged: 2010-09-01 12:10:18 UTC; gaab
+Packaged: 2010-10-21 08:22:36 UTC; GAAB
 Repository: CRAN
-Date/Publication: 2010-09-01 17:38:03
+Date/Publication: 2010-10-23 07:43:51
