--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,5 +1,5 @@
 Package: gRapHD
-Version: 0.2.2
+Version: 0.2.3
 Date: 2009-09-15
 Title: Efficient selection of undirected graphical models for
         high-dimensional datasets
@@ -20,6 +20,7 @@ Description: gRapHD is designed for efficient selection of
         supports the use of discrete, continuous, or both types of
         variables.
 License: GPL (>= 3)
-Packaged: 2011-05-26 13:38:30 UTC; Gabriel
+Packaged: 2013-04-14 12:22:07 UTC; Gabriel
+NeedsCompilation: yes
 Repository: CRAN
-Date/Publication: 2011-05-26 20:48:43
+Date/Publication: 2013-04-14 16:58:23
