--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,12 +3,16 @@ useDynLib(gRapHD)
 export(minForest,calcStat,chStat,DFS,findEd,neighbours,MCS,perfSets,randTree,
        stepw,rowProds,sortMat,SubGraph,neighbourhood,adjMat,Degree,
        shortPath,convData,fit,modelFormula,modelDim,jTree,ccoeff,
-       summary.gRapHD,print.gRapHD,is.gRapHD,as.gRapHD,plot.gRapHD,
-       CI.test,convertClass)
-importFrom(methods,is,as)
+       summary.gRapHD,print.gRapHD,show.gRapHD,plot.gRapHD,CI.test,
+       matrix.gRapHD,gRapHD.graphNEL,graphNEL.gRapHD,initialize.gRapHD)
+
+#importFrom(methods,is,as)
+
+importClassesFrom(graph,graphNEL)
+
        
-S3method(summary, gRapHD)
-S3method(print, gRapHD)
-S3method(is, gRapHD)
-S3method(as, gRapHD)
-S3method(plot, gRapHD)
+#S3method(summary, gRapHD)
+#S3method(print, gRapHD)
+#S3method(is, gRapHD)
+#S3method(as, gRapHD)
+#S3method(plot, gRapHD)
