--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,7 +3,7 @@ useDynLib(gRapHD)
 export(minForest,calcStat,chStat,DFS,findEd,neighbours,MCS,perfSets,randTree,
        stepw,rowProds,sortMat,plotG,SubGraph,neighbourhood,adjMat,Degree,
        shortPath,convData,fit,modelFormula,modelDim,jTree,ccoeff,
-       summary.gRapHD,print.gRapHD,is.gRapHD,as.gRapHD,
+       summary.gRapHD,print.gRapHD,is.gRapHD,as.gRapHD,plot.gRapHD,
        CI.test,convertClass)
 importFrom(methods,is,as)
        
@@ -11,3 +11,4 @@ S3method(summary, gRapHD)
 S3method(print, gRapHD)
 S3method(is, gRapHD)
 S3method(as, gRapHD)
+S3method(plot, gRapHD)
