--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,5 +1,5 @@
 Package: gRapHD
-Version: 0.1.0
+Version: 0.1.3
 Date: 2009-09-15
 Title: Efficient selection of undirected graphical models for
         high-dimensional datasets
@@ -9,6 +9,7 @@ Author: Gabriel Coelho Goncalves de Abreu <Gabriel.Abreu@agrsci.dk>,
 Maintainer: Gabriel Coelho Goncalves de Abreu <Gabriel.Abreu@agrsci.dk>
 Depends: R (>= 2.9.0), methods
 Suggests: graph
+LazyLoad: yes
 Description: gRapHD is designed for efficient selection of
         high-dimensional undirected graphical models. The package
         provides tools for selecting trees, forests and decomposable
@@ -18,6 +19,6 @@ Description: gRapHD is designed for efficient selection of
         supports the use of discrete, continuous, or both types of
         variables.
 License: GPL (>= 3)
-Packaged: 2009-09-21 06:47:14 UTC; gaab
+Packaged: 2010-01-11 09:38:34 UTC; gaab
 Repository: CRAN
-Date/Publication: 2009-09-21 07:27:19
+Date/Publication: 2010-01-11 17:49:11
