--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,5 +1,5 @@
 Package: gRapHD
-Version: 0.1.3
+Version: 0.1.4
 Date: 2009-09-15
 Title: Efficient selection of undirected graphical models for
         high-dimensional datasets
@@ -19,6 +19,6 @@ Description: gRapHD is designed for efficient selection of
         supports the use of discrete, continuous, or both types of
         variables.
 License: GPL (>= 3)
-Packaged: 2010-01-11 09:38:34 UTC; gaab
+Packaged: 2010-01-19 07:32:25 UTC; GAAB
 Repository: CRAN
-Date/Publication: 2010-01-11 17:49:11
+Date/Publication: 2010-01-19 08:06:43
